# textual-image

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  justfile  pyproject.toml  test.py
.github/: dependabot.yml
.github/actions/amend-version-sync/: action.yml
.github/actions/check/: action.yml
.github/actions/sync-versions/: action.yml
.github/workflows/: ci.yml  pr.yml  publish.yml  release-please.yml  release.yml  workflow.yml
scripts/: sync_project_versions.py
tests/: conftest.py  data.py  test_demo.py  test_geometry.py  test_main.py  test_pixeldata.py  test_rich.py  test_sixel.py  test_terminal.py  test_textual.py  test_tmux.py  test_utils.py  test_widget.py  util.py  utils.py
tests/__snapshots__/: test_demo.ambr  test_rich.ambr  test_sixel.ambr
tests/demo/: test_renderable.py  test_widget.py
tests/renderable/: test_base.py  test_halfcell.py  test_init.py  test_iterm2.py  test_kitty.py  test_sixel.py  test_tgp.py  test_unicode.py
tests/renderable/__snapshots__/: test_halfcell.ambr  test_iterm2.ambr  test_sixel.ambr  test_tgp.ambr  test_unicode.ambr
tests/renderable/fallback/: test_base.py  test_colored.py  test_grayscale.py
tests/renderable/fallback/__snapshots__/: test_colored.ambr  test_grayscale.ambr
tests/widget/: test_base.py  test_init.py  test_iterm2.py  test_kitty.py  test_sixel.py
textual_image/: __main__.py  _geometry.py  _pixeldata.py  _posix.py  _sixel.py  _terminal.py  _tmux.py  _utils.py  _win32.py
textual_image/demo/: __init__.py  cli.py  renderable.py  widget.py
textual_image/renderable/: __init__.py  _protocol.py  halfcell.py  iterm2.py  kitty.py  sixel.py  tgp.py  unicode.py
textual_image/widget/: __init__.py  _base.py  iterm2.py  kitty.py  sixel.py
textual_kitty/: __init__.py  __main__.py  _geometry.py  _pixeldata.py  _sixel.py  _utils.py  demo.py  geometry.py  pixeldata.py  rich.py  terminal.py  textual.py  widget.py
textual_kitty/demo/: __init__.py  renderable.py  widget.py
textual_kitty/renderable/: __init__.py  _base.py  _protocol.py  halfcell.py  sixel.py  tgp.py  unicode.py
textual_kitty/renderable/fallback/: __init__.py  _base.py  colored.py  grayscale.py
textual_kitty/widget/: __init__.py  _base.py  sixel.py
